--- a/Prognosis.ipynb
+++ b/Prognosis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "assigned-shopping",
+   "id": "immediate-johnston",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "exempt-colors",
+   "id": "stupid-haven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "flush-secondary",
+   "id": "engaging-lecture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "together-idaho",
+   "id": "seeing-pharmaceutical",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "complete-vancouver",
+   "id": "excellent-projection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "concrete-graduate",
+   "id": "listed-count",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "developed-italy",
+   "id": "statewide-fluid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "hourly-preference",
+   "id": "hazardous-tsunami",
    "metadata": {},
    "outputs": [
     {
@@ -406,32 +406,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "vertical-monkey",
+   "execution_count": 4,
+   "id": "daily-daniel",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "preprocessing() missing 1 required positional argument: 'df'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-0ce29447ff9a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpregnosis_tool\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mpreprocessing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: preprocessing() missing 1 required positional argument: 'df'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows Number: 891\n",
+      "Columns Number: 12 \n",
+      "\n",
+      "Variables List: \n",
+      "['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked']\n",
+      "\n",
+      "--Categorical--: \n",
+      "['Name', 'Sex', 'Ticket', 'Cabin', 'Embarked'] \n",
+      "\n",
+      "--Numerical--: \n",
+      "['PassengerId', 'Survived', 'Pclass', 'Age', 'SibSp', 'Parch', 'Fare'] \n",
+      "\n",
+      "Number of NaN: \n",
+      "PassengerId      0\n",
+      "Survived         0\n",
+      "Pclass           0\n",
+      "Name             0\n",
+      "Sex              0\n",
+      "Age            177\n",
+      "SibSp            0\n",
+      "Parch            0\n",
+      "Ticket           0\n",
+      "Fare             0\n",
+      "Cabin          687\n",
+      "Embarked         2\n",
+      "dtype: int64\n",
+      "\n",
+      "Data types: \n",
+      "PassengerId      int64\n",
+      "Survived         int64\n",
+      "Pclass           int64\n",
+      "Name            object\n",
+      "Sex             object\n",
+      "Age            float64\n",
+      "SibSp            int64\n",
+      "Parch            int64\n",
+      "Ticket          object\n",
+      "Fare           float64\n",
+      "Cabin           object\n",
+      "Embarked        object\n",
+      "dtype: object\n"
      ]
     }
    ],
    "source": [
-    "from pregnosis_tool import preprocessing\n",
+    "from pregnosis_tool import preprocessing, add_interactions, regression_imputer\n",
     "\n",
-    "preprocessing(df2)"
+    "categorical, numerical = preprocessing(df2, return_df=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cardiac-germany",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      0\n",
+       "Survived         0\n",
+       "Pclass           0\n",
+       "Age            177\n",
+       "SibSp            0\n",
+       "Parch            0\n",
+       "Fare             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "chubby-firewall",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.00    30\n",
+       "22.00    27\n",
+       "18.00    26\n",
+       "28.00    25\n",
+       "19.00    25\n",
+       "         ..\n",
+       "55.50     1\n",
+       "74.00     1\n",
+       "0.92      1\n",
+       "70.50     1\n",
+       "12.00     1\n",
+       "Name: Age, Length: 88, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical.Age.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "hired-locator",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical2 = regression_imputer(numerical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "clean-scheme",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = add_interactions(numerical2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dominican-albuquerque",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(891, 28)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "dirty-nurse",
+   "id": "southeast-butler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "assured-confirmation",
+   "id": "eligible-coalition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "entire-samoa",
+   "id": "large-milan",
    "metadata": {},
    "outputs": [
     {
